--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@expo/metro-runtime": "~5.0.4",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
+    "eas-cli": "^16.6.2",
     "expo": "~53.0.9",
+    "expo-contacts": "~14.2.4",
     "expo-document-picker": "~13.1.5",
     "expo-file-system": "~18.1.10",
     "expo-sqlite": "~15.2.10",
@@ -25,8 +27,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0",
-    "expo-contacts": "~14.2.4"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
